GNOME Bugzilla – Bug 765170
gnome-calendar crashes when adding source
Last modified: 2017-04-17 18:20:40 UTC
Created attachment 326184 [details] [review] fixes the bug for me When adding a caldav source, gnome-calendar crashed. I traced it back to the access of a NULL user_addresses at gcal-source-dialog.c. Here is a patch that fixes it. Thanks. Cascardo.
Thanks for fixing this issue. I took the liberty to adjust the commit message.