source-dialog: protect against NULL user address

e_webdav_discover_sources_finish can discover no user addresses and
return a NULL user_addresses. Check for that before calling
e_source_webdav_set_email_address.

https://bugzilla.gnome.org/show_bug.cgi?id=765170